--- a/html_basic/base_index.html
+++ b/html_basic/base_index.html
@@ -1,1 +1,10 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>My First Portfolio</title>
+</head>
+<body>
+    <p>Tips: don’t forget to read all concept pages…</p>
+</body>
+</html>
