--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -12,6 +12,7 @@
 
   
     <p>This portfolio is my first step into building and managing projects on GitHub.</p>
+    <p><a href="tweets.html">See my tweets</a></p>
     <p>It demonstrates my growing skills in HTML, JavaScript, and version control workflows.</p>
     <p>Through this project, I am practicing proper coding standards and validation using official tools.</p>
     <p>My long-term goal is to expand this portfolio with more advanced projects and professional achievements.</p>
