--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -5,16 +5,34 @@
     <title>My Tweets</title>
 </head>
 <body>
-    <h1>My Tweets</h1>
-    <p>Here are some tweets I’ve embedded directly into my portfolio.</p>
+    <header>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="tweets.html">Tweets</a></li>
+        </ul>
+    </header>
 
-    <blockquote class="twitter-tweet">
-        <p lang="en" dir="ltr">Learning GitHub workflows is fun and rewarding!</p>
-        <a href="https://twitter.com/TwitterDev/status/1293593516040269825">August 13, 2020</a>
-    </blockquote> 
+    <main>
+        <article>
+            <h1>My Tweets</h1>
+            <p>Here are some tweets I’ve embedded directly into my portfolio.</p>
 
-    <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+            <blockquote class="twitter-tweet">
+                <p lang="en" dir="ltr">Learning GitHub workflows is fun and rewarding!</p>
+                <a href="https://twitter.com/TwitterDev/status/1293593516040269825">August 13, 2020</a>
+            </blockquote> 
 
-    <p><a href="index.html">Back to homepage</a></p>
+            <!-- Twitter embed script -->
+            <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+        </article>
+
+        <aside>
+            <p>placeholder to add comment thread later</p>
+        </aside>
+    </main>
+
+    <footer>
+        <p>Made by Otsile Ratlhogo - <a href="https://github.com/Otsile-Ratlhogo" target="_blank">here</a></p>
+    </footer>
 </body>
 </html>
