--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -22,14 +22,46 @@
             <p>It demonstrates my growing skills in HTML, JavaScript, and version control workflows.</p>
             <p>Through this project, I am practicing proper coding standards and validation using official tools.</p>
             <p>My long-term goal is to expand this portfolio with more advanced projects and professional achievements.</p>
+
             <a href="https://www.alxafrica.com" target="_blank">
                 <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="ALX Logo" width="200">
             </a>
+
+            <div class="learners-table">
+                <table>
+                    <thead>
+                        <tr>
+                            <th scope="col">Name</th>
+                            <th scope="col">Age</th>
+                            <th scope="col">Country</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>John</td>
+                            <td>25</td>
+                            <td>USA</td>
+                        </tr>
+                        <tr>
+                            <td>Emily</td>
+                            <td>28</td>
+                            <td>Canada</td>
+                        </tr>
+                        <tr>
+                            <td>Michael</td>
+                            <td>32</td>
+                            <td>Australia</td>
+                        </tr>
+                        <tr>
+                            <td>Sophia</td>
+                            <td>21</td>
+                            <td>UK</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
         </article>
 
-        <aside>
-            <p>placeholder to add comment thread later</p>
-        </aside>
     </main>
 
     <footer>
